Tech Support, Courses and Learn Tech css added git add .!

--- a/learntech.html
+++ b/learntech.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>  
 
     <title>LearnTech+ | Learn Tech</title>
 
@@ -33,44 +33,48 @@
 
   <section id="learntech">
 
-    <center><h1 class="h1lt">Learn Tech</h1></center>
+    <h1 class="h1lt">Learn Tech</h1>
 
-    <div class="learntechnow">
+	<div class="learntech">
+		<div class="card">
 
-      <img src="img/learntechnow.jpg" alt="Learn Tech Now">
+			<img src="img/learntechnow.jpg" alt="Learn Tech Now">
 
-      <center><h2>Learn Tech Now</h2></center>
+			<div class="card-body">
+				<h2>Learn Tech Now</h2>
 
-			<center><h6>Daily Video Series Covering Tech Topics</h6></center>
+				<h6>Daily Video Series Covering Tech Topics</h6>
 
-			<center><button>Watch Now</button></center>
+				<button>Watch Now</button>
+			</div>
+		</div>
 
-    </div>
-
-    <div class="learntechpodcast">
+		<div class="card">
 
 			<img src="img/learntechpodcast.jpg">
+			
+			<div class="card-body">
+				<h2>Learn Tech Podcast</h2>
 
-			<center><h2>Learn Tech Podcast</h2></center>
+				<h6>Daily Podcast Series Covering Tech Topics.</h6>
 
-			<center><h6>Daily Podcast Series Covering Tech Topics.</h6></center>
-
-			<center><button>Listen Now</button></center>
-
+				<button>Listen Now</button>
+			</div>			
 		</div>
 
-		<div class="learntechblog">
+		<div class="card">
 
 			<img src="img/techtipsblog.jpg">
+			
+			<div class="card-body">
+				<h2>Tech Tips Blog</h2>
 
-			<center><h2>Tech Tips Blog</h2></center>
+				<h6>Daily Blog Covering Tech Topics.</h6>
 
-			<center><h6>Daily Blog Covering Tech Topics.</h6></center>
-
-			<center><button>Read Now</button></center>
-
-		</div>
-
+				<button>Read Now</button>
+			</div>			
+		</div>		
+	</div>
 
   </section>
 
