--- a/techsupport.html
+++ b/techsupport.html
@@ -33,51 +33,45 @@
 
   <section id="techsupport">
 
-		<center><h1>Tech Support</h1></center>
+		<h1>Tech Support</h1>
 
-		<div class="computersupport">
+		<div class="supports">
+			<div class="computersupport">
+				
+				<img id="computer" src="img/course-01.jpg">
 
-			<img id="computer" src="img/course-01.jpg">
-
-			<div class="text">
 				<h1>Computer Support</h1>
 
 				<p>This is some text about computer support</p>
 
 				<button>Book Appointment</button>
+
 			</div>
 
-		</div>
+			<div class="computersupport2">
 
-		<div class="computersupport2">
+				<img id="computer2" src="img/course-01.jpg">
 
-			<img id="computer2" src="img/course-01.jpg">
-
-			<div class="text2">
 				<h1>Printer Support</h1>
 
 				<p>This is some text about computer support</p>
 
 				<button>Book Appointment</button>
+
 			</div>
 
-		</div>
+			<div class="computersupport3">
 
-		<div class="computersupport3">
+				<img id="computer3" src="img/course-01.jpg">
 
-			<img id="computer3" src="img/course-01.jpg">
-
-			<div class="text3">
 				<h1>Smart Device Support</h1>
 
 				<p>This is some text about computer support</p>
 
 				<button>Book Appointment</button>
-			</div>
 
+			</div>			
 		</div>
-
-
 
 	</section>
 
