--- a/courses.html
+++ b/courses.html
@@ -34,29 +34,30 @@
 
   <section id="courses">
 
-    <center><h1>Our Courses</h1></center>
+    <h1>Our Courses</h1>
 
-    <div class="course">
+    <div class="course-container">
+		<div class="course">
 
-      <img src="img/course-01.jpg" alt="">
+			<img src="img/course-01.jpg" alt="">
 
-      <center><h2>HTML5 For Beginners</h2></center>
+			<h2>HTML5 For Beginners</h2>
 
-			<center><h6>This course was designed for students starting out in Front End Web Development wanting to learn HTML5 to get started........</h6></center>
+			<h6>This course was designed for students starting out in Front End Web Development wanting to learn HTML5 to get started........</h6>
 
-			<center><button>Learn More</button></center>
+			<button>Learn More</button>
 
-    </div>
+		</div>
 
-    <div class="course2">
+		<div class="course2">
 
 			<img src="img/course-02.jpg">
 
-			<center><h2>CSS3 For Beginners</h2></center>
+			<h2>CSS3 For Beginners</h2>
 
-			<center><h6>This course was designed for students starting out in Front End Web Development wanting to learn CSS3 to get started........</h6></center>
+			<h6>This course was designed for students starting out in Front End Web Development wanting to learn CSS3 to get started........</h6>
 
-			<center><button>Learn More</button></center>
+			<button>Learn More</button>
 
 		</div>
 
@@ -64,13 +65,14 @@
 
 			<img src="img/course-03.jpg">
 
-			<center><h2>JavaScript For Beginners</h2></center>
+			<h2>JavaScript For Beginners</h2>
 
-			<center><h6>This course was designed for students starting out in Front End Web Development wanting to learn JavaScript to get started........</h6></center>
+			<h6>This course was designed for students starting out in Front End Web Development wanting to learn JavaScript to get started........</h6>
 
-			<center><button>Learn More</button></center>
+			<button>Learn More</button>
 
-		</div>
+		</div>      
+    </div>
 
   </section>
 
