design complete git add .!

--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
 
-    <title>LearnTech+ | Contact</title>
+		<title>LearnTech+ | Contact</title>
 
-    <!-- Start Normalize CSS -->
-  	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<!-- Start Normalize CSS -->
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-  	<!-- Start Custom CSS -->
-  	<link rel="stylesheet" type="text/css" href="css/contact.css">
+		<!-- Start Custom CSS -->
+		<link rel="stylesheet" type="text/css" href="css/contact.css">
 
-  	<!-- Start Global CSS -->
-  	<link rel="stylesheet" type="text/css" href="css/global.css">
-
-
-</head>
-<body>
-
-  <header>
+		<!-- Start Global CSS -->
+		<link rel="stylesheet" type="text/css" href="css/global.css">
 
 
-    <nav>
-      <img id="logo" src="img/logo.png" alt="LearnTech+ Logo">
-      <a href="index.html">Home</a>
-      <a href="techsupport.html">Tech Support</a>
-      <a href="courses.html">Courses</a>
-      <a href="premiumplus.html">Premium Plus</a>
-      <a href="learntech.html">Learn Tech</a>
-      <a class="active" href="contact.html">Contact</a>
-    </nav>
+	</head>
+	<body>
 
+	<header>
+		<nav>
+			<img id="logo" src="img/logo.png" alt="LearnTech+ Logo">
+			<a href="index.html">Home</a>
+			<a href="techsupport.html">Tech Support</a>
+			<a href="courses.html">Courses</a>
+			<a href="premiumplus.html">Premium Plus</a>
+			<a href="learntech.html">Learn Tech</a>
+			<a class="active" href="contact.html">Contact</a>
+		</nav>
+	</header>
 
-  </header>
+	<form>
+		<h1>Contact Us</h1>
+		
+		<div class="input-group">
+			<h3>First Name:</h3>
+			<input type="text" name="firstname" value="">
+		</div>
+		
+		<div class="input-group">
+			<h3>Last Name:</h3>
+			<input type="text" name="lastname" value="">
+		</div>
 
-  <form>
-    First Name: <br>
-    <input type="text" name="firstname" value="">
-    <br>
-    Last Name: <br>
-    <input type="text" name="lastname" value="">
-    <br>
-    Email:<br>
-    <input type="text" name="email" value="">
-    <br>
-    <br>
-    <textarea name="message" rows="10" cols="30"></textarea>
-    <br>
-    <br>
-    <input type="submit" name="" value="Submit">
+		<div class="input-group">
+			<h3>Email:</h3>
+			<input type="text" name="email" value="">
+		</div>
 
-  </form>
+		<div class="input-group">
+			<h3>Message:</h3>
+			<textarea name="message" rows="10" cols="30"></textarea>
+		</div>
+		
+		<input type="submit" name="" value="Submit">
+	</form>
 
-  <footer>
+	<footer>
+		<img id="logo" src="img/logo.png">
+		<p id="footer">© Copyright 2021. All Rights Reserved. | LearnTech Plus</p>
+	</footer>
 
-    <img id="logo" src="img/logo.png">
-
-    <p id="footer">© Copyright 2021. All Rights Reserved. | LearnTech Plus</p>
-
-  </footer>
-
-</body>
+	</body>
 </html>
